--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,15 @@ body {
   font-family: 'Lora', serif !important;
   color: white !important;
 }
+
+body::-webkit-scrollbar {
+  width: 7px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgb(213, 210, 210);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #282828;
+  border-radius: 20px;
+}
